--- a/p2p-lan-file-sharing/package.json
+++ b/p2p-lan-file-sharing/package.json
@@ -13,8 +13,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^9.1.0",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "p2p-lan-file-sharing": "file:",
     "socket.io": "^4.8.1"
