--- a/p2p-lan-file-sharing/package.json
+++ b/p2p-lan-file-sharing/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "concurrently": "^9.1.0",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.0.4",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "p2p-lan-file-sharing": "file:",
