--- a/p2p-lan-file-sharing/package.json
+++ b/p2p-lan-file-sharing/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "concurrently": "^9.1.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
@@ -23,6 +24,7 @@
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "p2p-lan-file-sharing": "file:",
+    "react-router-dom": "^6.28.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
